testdata/baselines/reference/submodule/compiler/isolatedDeclarationErrorsDefault.errors.txt
a.ts(1,16): error TS9037: Default exports can't be inferred with --isolatedDeclarations.
b.ts(1,1): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
b.ts(1,23): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
c.ts(1,1): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
c.ts(1,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
d.ts(1,1): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
d.ts(1,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
e.ts(1,1): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
e.ts(1,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
f.ts(1,7): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
f.ts(1,18): error TS9013: Expression type can't be inferred with --isolatedDeclarations.


==== a.ts (1 errors) ====
    export default 1 + 1;
                   ~~~~~
!!! error TS9037: Default exports can't be inferred with --isolatedDeclarations.
!!! related TS9036 a.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
    
    
==== b.ts (2 errors) ====
    export default { foo: 1 + 1 };
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 b.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 b.ts:1:1: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
                          ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 b.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 b.ts:1:23: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
==== c.ts (2 errors) ====
    export default [{ foo: 1 + 1 }];
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 c.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 c.ts:1:1: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
                           ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 c.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 c.ts:1:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
==== d.ts (2 errors) ====
    export default [{ foo: 1 + 1 }] as const;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 d.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 d.ts:1:1: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
                           ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 d.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 d.ts:1:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
==== e.ts (2 errors) ====
    export default [{ foo: 1 + 1 }] as const;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 e.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 e.ts:1:1: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
                           ~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9036 e.ts:1:1: Move the expression in default export to a variable and add a type annotation to it.
!!! related TS9035 e.ts:1:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
==== f.ts (2 errors) ====
    const a = { foo: 1 };
          ~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 f.ts:1:7: Add a type annotation to the variable a.
                     ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 f.ts:1:7: Add a type annotation to the variable a.
!!! related TS9035 f.ts:1:18: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    export default a;